--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1 class="text-center mt-4">EECS 4314 - ADVANCED SOFTWARE ENGINEERING </h1>
     <h2 class="center mt-4">Group Names</h2>
     <ul>
-        <li>Khanake</li>
+        <li>Khanak</li>
         <li>Gilbert Andze Tsoungui</li>
         <li>Asma Hassan</li>
         <li>Andrew Lnigh-Fuoco</li>
