--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h1 class="text-center mt-4">EECS 4314 - ADVANCED SOFTWARE ENGINEERING </h1>
     <h2 class="center mt-4">Group Names</h2>
     <ul>
-        <li>Khanak</li>
+        <li>Akbar Khan</li>
         <li>Gilbert Andze Tsoungui</li>
         <li>Asma Hassan</li>
-        <li>Andrew Lnigh-Fuoco</li>
+        <li>Andrew Laniak-Fuoco</li>
         <li>Rabia Ejaz</li>
     </ul>
 </div>
