--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <li>Andrew Laniak-Fuoco</li>
         <li>Rabia Ejaz</li>
     </ul>
+
+    <h2 class="center mt-4">Github Account Link</h2>
+    <a href="https://github.com/Gilru/EECS-4314---ADVANCED-SOFTWARE-ENGINEERING">Github Account</a>
+
 </div>
 
 
