github account link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
 
     <h2 class="center mt-4">Github Account Link</h2>
-    <a href="https://github.com/Gilru/EECS-4314---ADVANCED-SOFTWARE-ENGINEERING">Github Account</a>
+    <a href="https://github.com/Gilru/EECS-4314---ADVANCED-SOFTWARE-ENGINEERING" target="_blank">Github Account</a>
 
 </div>
 
