--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="container">
     <h1 class="text-center mt-4">EECS 4314 - ADVANCED SOFTWARE ENGINEERING </h1>
-    <h2 class="center mt-4">Group Names</h2>
+    <h2 class="center mt-4">Group Names(SOFTWARE-GROUP)</h2>
     <ul>
         <li>Akbar Khan</li>
         <li>Gilbert Andze Tsoungui</li>
