--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="https://github.com/Gilru/EECS-4314---ADVANCED-SOFTWARE-ENGINEERING" target="_blank">Github Account</a>
 
     <h2>Assigment 1</h2>
-    <a href="HBase-Final.pptx" download>Assigment 1</a>
+    <a href="/HBase-Final.pptx" download>Assigment 1</a>
 
 </div>
 
