--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>Asma Hassan</li>
         <li>Andrew Laniak-Fuoco</li>
         <li>Rabia Ejaz</li>
+        <li>Anji Tong</li>
     </ul>
 
     <h2 class="center mt-4">Github Account Link</h2>
